# Appsflyer_Pipeline

./: .gitignore  README.md  pyproject.toml
config/: appsflyer.py  clickhouse.py  data_locker.py  funzy_db.py  game.py  load_env.py  minio.py
constants/: appsflyer.py  data_locker.py  modeling.py
dags/: appsflyer_ingestion_dag.py  appsflyer_transformation_dag.py  data_locker_app_ingestion_dag.py  data_locker_web_ingestion_dag.py  data_locker_web_transformation_dag.py  funzy_ingestion_dag.py  game_master_dag.py  modeling_dag.py
resources/location/: continent.json  region.json  state.json
resources/query_template/: COHORT_MKT.sql  dim_user.sql  dim_user_web.sql  fact_device.sql  fact_device_web.sql  fact_login.sql  fact_transaction.sql  fact_vip_level.sql  install.sql  partners_by_date_report.sql
resources/table_modeling/: COHORT_MKT.sql  dim_user.sql  fact_device.sql  fact_login.sql  fact_transaction.sql  fact_vip_level.sql  install.sql  partners_by_date_report.sql
tasks/ingestion/: appsflyer_api_data.py  crawl_appsflyer_cohort.py  data_locker.py  funzy_data.py
tasks/modeling/: load_data.py
tasks/transformations/appsflyer/: af_install.py  af_level.py  af_login.py  af_purchase.py  af_registration.py  af_tutorial_complete.py  af_vip_level.py  partners_by_date.py
tasks/transformations/data_locker/: web_level.py  web_login.py  web_play_game.py  web_purchase.py  web_registration.py  web_retention.py  web_tutorial_complete.py  (+1 more)
tasks/validation/: load_config.py
utils/: clickhouse_utils.py  common_utils.py  funzy_utils.py  minio_utils.py  spark_utils.py
