[tool.poetry]
name = "cdp_meow_development"
version = "0.1.0"
description = ""
authors = ["ManhHung1501 <hungnm2@ftech.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.2.1"
python-decouple = "^3.8"
selenium = "^4.7.1"
clickhouse-driver = "^0.2.5"
SQLAlchemy = "^1.4.9"
boto3 = "^1.19.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
